[package]
name = "cryptoflare"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2     = "0.5.3"
bcrypt = "0.16.0"
getrandom  = { version = "0.2.15", features = ["js"] }
rand_core  = { version = "0.6.4", features = ["std"] }
serde      = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
worker     = "0.5.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
